[package]
name = "keal"
version = "0.7.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.75"
bitflags = "2.4.1"
fork = "0.1.22"
iced = { version = "0.10.0", features = ["image", "svg", "web-colors"] }
indexmap = "2.1.0"
nucleo-matcher = "0.2.0"
serde = { version = "1.0.193", features = ["serde_derive"] }
serde_cbor = "0.11.2"
walkdir = "2.4.0"
