[package]
name = "keal_iced"
version = "0.7.3"
edition = "2021"

[[bin]]
name = "keal"
path = "src/main.rs"

[dependencies]
keal = { path = "../keal" }
anyhow = "1.0.75"
bitflags = "2.4.1"
iced = { version = "0.13.1", features = ["advanced", "image", "svg", "web-colors"] }
indexmap = "2.1.0"

# Optimize iced in debug mode
[profile.dev.package.iced]
opt-level = 3
