[package]
name = "keal_piet"
version = "0.1.0"
edition = "2021"

[dependencies]
copypasta = "0.10.1"
cosmic-text = { version = "0.9.0", default-features = false, features = ["std", "swash"] }
fork = "0.2.0"
keal = { version = "0.7.2", path = "../keal" }
nucleo-matcher = "0.2.0"
piet-tiny-skia = "0.2.3"
resvg = "0.44.0"
smallvec = "1.13.2"
softbuffer = "0.4.6"
winit = "0.30.7"
