[package]
name = "keal_piet"
version = "0.7.3"
edition = "2024"

[dependencies]
copypasta = { version = "0.10.1", default-features = false, features = [ "x11", "wayland" ] }
keal = { version = "0.7.3", path = "../keal" }
piet-tiny-skia = "0.2.3"
resvg = "0.44.0"
smallvec = "1.13.2"
softbuffer = { version = "0.4.6", default-features = false, features = [ "x11", "wayland" ] }
winit = "0.30.7"
